<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_paint"
            style="@style/image_editor_subtitle_item"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/image_editor_material_color_picker_horizontal_margin"
            android:text="@string/image_editor_edit" />

        <TextView
            android:id="@+id/btn_stickers"
            style="@style/image_editor_subtitle_item"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/image_editor_stickers" />

        <TextView
            android:id="@+id/btn_filter"
            style="@style/image_editor_subtitle_item"
            android:layout_gravity="center"
            android:text="@string/image_editor_filter" />

        <TextView
            android:id="@+id/btn_crop"
            style="@style/image_editor_subtitle_item"
            android:layout_gravity="center"
            android:text="@string/image_editor_crop" />

        <TextView
            android:id="@+id/btn_rotate"
            style="@style/image_editor_subtitle_item"
            android:layout_gravity="center"
            android:text="@string/image_editor_rotate" />

        <TextView
            android:id="@+id/btn_text"
            style="@style/image_editor_subtitle_item"
            android:layout_gravity="center"
            android:text="@string/image_editor_text" />

        <TextView
            android:id="@+id/btn_beauty"
            style="@style/image_editor_subtitle_item"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/image_editor_material_color_picker_horizontal_margin"
            android:text="@string/image_editor_beauty" />
    </LinearLayout>
</HorizontalScrollView>

